--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^15.3.2",
     "react-draggable": "^2.2.3",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
